load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "remoteworker",
    srcs = [
        "client.go",
        "executor.go",
    ],
    importpath = "github.com/buildbarn/bonanza/pkg/remoteworker",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ds",
        "//pkg/proto/remoteexecution",
        "//pkg/proto/remoteworker",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/otel",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_secure_io_siv_go//:siv-go",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
