load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "scheduler",
    srcs = ["in_memory_build_queue.go"],
    importpath = "github.com/buildbarn/bonanza/pkg/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/buildqueuestate",
        "//pkg/proto/remoteexecution",
        "//pkg/proto/remoteworker",
        "//pkg/scheduler/initialsizeclass",
        "//pkg/scheduler/invocation",
        "//pkg/scheduler/routing",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/otel",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
