load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = ["util.go"],
    importpath = "github.com/buildbarn/bonanza/pkg/bazelclient/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazelclient/logging",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
    ],
)
