load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "simplelzw",
    srcs = [
        "compress.go",
        "decompress.go",
    ],
    importpath = "github.com/buildbarn/bonanza/pkg/compress/simplelzw",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/encoding/varint",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "simplelzw_test",
    srcs = [
        "compress_test.go",
        "decompress_test.go",
    ],
    deps = [
        ":simplelzw",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
